# m5stack_esp32s3_i2c_scan_rs

./: Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
docs/: README.md
scripts/: flash.sh
src/: main.rs
